--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,24 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/question_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:padding="24dp"
-        android:textAlignment="center"
-        android:textIsSelectable="false" />
+        android:textAlignment="center" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
-
         <Button
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
@@ -32,30 +31,31 @@
             android:text="@string/false_button" />
     </LinearLayout>
 
-    <LinearLayout
+    <ImageButton
+        android:id="@+id/prev_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:contentDescription="@string/prev_button"
+        android:layout_gravity="bottom|left"
+        android:src="@drawable/ic_arrow_left" />
 
-        <ImageButton
-            android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/prev_button"
-            android:src="@drawable/ic_arrow_left" />
+    <ImageButton
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/next_button"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_arrow_right" />
 
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/next_button"
-            android:src="@drawable/ic_arrow_right" />
-    </LinearLayout>
     <TextView
         android:id="@+id/answers_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
         android:padding="24dp"
         android:textAlignment="center"
         android:textIsSelectable="false" />
-</LinearLayout>
+
+
+
+</FrameLayout>
